app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/* mixins, variables, etc. */
$gray-medium-light: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}

/* universal */
body {
  padding-top: 80px;
  background-color: #474e5d;
  color: white;
}
section {
  overflow: auto;
}
textarea {
  resize: vertical;
  color: $gray-darker;
}
.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}
.new-message{
  padding-bottom: 50px;
}

/* typography */
h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}
h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}
h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $gray-light;
}

h3 {
  text-align: center;
}
p{
  line-height: 1.1;
}

/* header */

header {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: white;
  padding-top: 9px;
  font-weight: bold;
  width: 100%;
  &:hover{
    color: white;
    text-decoration: none;
  }
  .header-links{
    float: right;
    font-size: 0.7em;
  }
  .header-text{
    float: right;
    font-size: 0.7em;
    margin-right: 10px;
  }
}


/* footer */
footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid $gray-medium-light;
  color: $gray-light;
  a{
    color: $gray;
    &hover{
      color: $gray-darker;
    }
  }
  small{
    float: left;
  }
  ul{
    float: right;
    list-style: none;
    li{
      float: left;
      margin-left: 15px;
    }
  }
}

/* miscellaneous */
.debug_dump{
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

.img-circle{
  border-radius: 50%;
  border: 2px solid #777;
}

.img-circle-bg{
  width: 50%;
}

/* Home */
#home{
  // background-image: url(background.jpg);
  // background-image: url(fushimi-inari.jpg);
  background-image: url(https://github.com/dsanta87/dsanta87.github.io/blob/master/app/assets/stylesheets/fushimi-inari.jpg?raw=true);
  background-repeat: no-repeat;
  background-size: 100% auto;
  height: 1024px;
  .home-container{
    top: 33%;
    color: white;
    position: relative;
    vertical-align: middle;
  }
}

/* Sidebar */
asside{
  section{
    padding: 10px, 0;
    margin-top: 20px;
    &:first-child {
      border: 0;
      padding-top: 0;
    }
    span{
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }
    h1{
      font-size: 1.4em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
      margin-top: 0px;
    }
  }
}

/* Forms */

input, textarea, select, .uneditable-input{
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input{
  height: auto !important;
  color: #428bca;
}

#error_explanation{
  color: red;
  ul {
color: red;
    margin: 0 0 30px 0;
  }
}
.field_with_errors{
  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}

#timeline{
  // * {
  //   box-sizing: border-box;
  // }
  /* The actual timeline (the vertical ruler) */
  .timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
  }

  /* The actual timeline (the vertical ruler) */
  .timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: white;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -3px;
  }

  /* Container around content */
  .container-timeline {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
    color: $gray;
  }

  /* The circles on the timeline */
  .container-timeline::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -12px;
    background-color: white;
    border: 4px solid #428bca;
    top: 15px;
    border-radius: 50%;
    z-index: 1;
  }

  /* Place the container to the left */
  .left {
    left: 0;
  }

  /* Place the container to the right */
  .right {
    left: 50%;
  }

  /* Add arrows to the left container (pointing right) */
  .left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 17px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid white;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent white;
  }

  /* Add arrows to the right container (pointing left) */
  .right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 17px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
  }

  /* Fix the circle for containers on the right side */
  .right::after {
    left: -13px;
  }

  /* The actual content */
  .content {
    padding: 20px 30px;
    background-color: white;
    position: relative;
    border-radius: 6px;
  }

  /* Media queries - Responsive timeline on screens less than 600px wide */
  @media screen and (max-width: 600px) {
  /* Place the timelime to the left */
    .timeline::after {
      left: 31px;
    }

  /* Full-width containers */
    .container-timeline {
      width: 100%;
      padding-left: 70px;
      padding-right: 25px;
    }

  /* Make sure that all arrows are pointing leftwards */
    .container-timeline::before {
      left: 60px;
      border: medium solid white;
      border-width: 10px 10px 10px 0;
      border-color: transparent white transparent transparent;
    }

  /* Make sure all circles are at the same spot */
    .left::after, .right::after {
      left: 15px;
    }

  /* Make all right containers behave like the left ones */
    .right {
      left: 0%;
    }
  }
}

